# pocket-tts-openai_streaming_server

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: config.py  language_normalize.py  routes.py
app/services/: tts.py
