[project]
name = "pocket-tts-openai-streaming-server"
version = "0.1.0"
description = "OpenAI-compatible TTS server for Pocket-TTS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "waitress>=3.0.0",
    "pocket-tts>=1.1.0",
    "torch>=2.0.0,<=2.8.0",
    "torchaudio>=2.0.0,<=2.8.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

# Run as a script/app. `uv sync` resolves dependencies without building this project as a wheel.
[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
