[project]
name = "pocket-tts-openai-streaming-server"
version = "0.1.0"
description = "OpenAI-compatible TTS server for Pocket-TTS"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "flask>=3.0.0",
    "waitress>=3.0.0",
    # Multi-language pocket-tts (2.x) ships full per-locale YAML configs
    # (english/french_24l/german_24l/italian/italian_24l/portuguese/portuguese_24l/spanish/spanish_24l).
    # PyPI still publishes 1.1.x (English-only), so we source it from the local clone by default.
    "pocket-tts>=2.0.0",
    # torchaudio 2.9 moved audio encoding to torchcodec and breaks torchaudio.save() unless torchcodec is installed.
    # Pin to <2.9 so the built-in encoders stay available (keeps mp3/wav/flac/opus/aac output working).
    "torch>=2.5.0,<2.9",
    "torchaudio>=2.5.0,<2.9",
    "scipy>=1.10.0",
    "numpy>=2.0.0",
    "soundfile>=0.12.0",
]

# Run as an application; `uv sync` resolves dependencies without building this repo as a wheel.
[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
# Use the cloned multi-language pocket-tts repo alongside this project.
# Override with POCKET_TTS_SOURCE / a different path, or remove this entry to pull from PyPI
# (PyPI is English-only at time of writing; see README).
pocket-tts = { path = "../pocket-tts", editable = true }
